--- a/pug/blocks/footer.pug
+++ b/pug/blocks/footer.pug
@@ -27,7 +27,7 @@ footer
 				a(href="#") +7 (812) 900 61 90
 			.feedback-footer-item
 				span Почта:
-				a(href="#") mail@mail.ru
+				a(href="#") info@pk-dorteh.ru
 
 		.col-3.feedback
 			a.logo(href="./index.html")
@@ -35,7 +35,7 @@ footer
 			.feedback-footer-item
 				a(href="#")  +7 (495) 969 58 69
 			.feedback-footer-item
-				a(href="#") mail@mail.ru
+				a(href="#") dds@merko-russland.com
 
 			.feedback-footer-item
 				span Адрес:
