--- a/pug/blocks/header.pug
+++ b/pug/blocks/header.pug
@@ -1,18 +1,20 @@
 //- include preload.pug
-header
+header.main-header
 	.main-grid
 		.col-12
 			.vertical-align
 				.feedback-header
 						a.phone-btn(href="#") 
 							i
-							span + 971 56 115 16 24
+							span +7 (495) 969 58 69
 						a.mail-btn(href="#") 
 							i
-							span + 971 56 115 16 24
+							span dds@merko-russland.com
 		.col-3.logo-container.vertical-align
-			a.logo(href="#") 
+			a.logo.logo-white(href="#") 
 				img(src="/images/logo.svg", alt="")
+			a.logo.logo-red(href="#") 
+				img(src="/images/logo-red.svg", alt="")
 		.col-9.vertical-align
 			nav.nav-header
 				ul.ln
