--- a/pug/default/head.pug
+++ b/pug/default/head.pug
@@ -7,18 +7,23 @@ head
 		content="width=device-width, initial-scale=1.0"
 	)
 
-	link(href="/css/ion.rangeSlider.css"	type="text/css"	rel="stylesheet")
+	//- link(href="/css/ion.rangeSlider.css"	type="text/css"	rel="stylesheet")
 	link(href="/css/lightslider.css"	type="text/css"	rel="stylesheet")
-	link(href="/css/air-datepicker.css"	type="text/css"	rel="stylesheet")
+	//- link(href="/css/air-datepicker.css"	type="text/css"	rel="stylesheet")
+	link(href="/css/lightbox.css"	type="text/css"	rel="stylesheet")
 	link(href="/fonts/stylesheet.css"	type="text/css"	rel="stylesheet")
 	link(href="/style.css"	type="text/css"	rel="stylesheet")
 
 
 	script(	src='/js/jquery-3.6.0.min.js' defer)
-	script(	src='/js/air-datepicker.js' defer)
-	script(	src='/js/ion.rangeSlider.js' defer)
+	//- script(	src='/js/air-datepicker.js' defer)
+	//- script(	src='/js/ion.rangeSlider.js' defer)
 	script(	src='/js/jquery.mask.js' defer)
+	script(	src='/js/lightbox.js' defer)
 	script(	src='/js/lightslider.js' defer)
+	//- script( src="https://api-maps.yandex.ru/2.1/?lang=ru-RU&amp;apikey=622f71f2-3860-4b53-a18e-e76d385abfe7" defer)
+	script(src="https://api-maps.yandex.ru/2.1/?apikey=fced5e55-2779-4df7-8baf-39cc561448b5&lang=ru_RU" type="text/javascript")
+	script( src="/js/map.js" defer)
 	script(	src='/common-dist.js' defer) 
 
 // range slider
