--- a/scss/sourse/blocks/slider/_lightSlider.sass
+++ b/scss/sourse/blocks/slider/_lightSlider.sass
@@ -3,6 +3,9 @@
 .lightSlider,
 .lslide
   height: 100%
+.lSSlideOuter
+  position: relative
+  overflow: hidden
 .lSAction
   @include positionElement(100%,1px,0,50%)
 
