--- a/scss/sourse/default/forms/_default.sass
+++ b/scss/sourse/default/forms/_default.sass
@@ -6,7 +6,7 @@ input
 .input-decorate,
 .custom-select,
 .file-decorate
-	padding: 15px
+	padding: 12px 15px
 	border: 0
 	font-family: inherit
 	font-size: $standartSize
