--- a/scss/sourse/elements/_btns.sass
+++ b/scss/sourse/elements/_btns.sass
@@ -36,6 +36,24 @@
 		background: $goldColor
 		color: $whiteColor
 		border-color: $goldColor
+
+.btn--black
+	background-color: $blackColor
+	border-color: $blackColor
+	color: $whiteColor
+	&:hover
+		background: $redColor
+		color: $whiteColor
+		border-color: $redColor
+
+.btn--black-border
+	background: none
+	border-color: $blackColor
+	color: $blackColor
+	&:hover
+		background: $redColor
+		color: $whiteColor
+		border-color: $redColor
 .btn--red
 	background-color: $redColor
 	border-color: $redColor
