--- a/scss/sourse/pages/product/_catalog.sass
+++ b/scss/sourse/pages/product/_catalog.sass
@@ -31,8 +31,10 @@
       font-size: inherit
       &:hover
         color: $goldColor
-
-.product-item-info
+.product-item-hint
+  text-align: right
+  font-size: 12px
+  padding-bottom: 4px
 
 .product-item-price
   font-weight: 700
