--- a/scss/style.sass
+++ b/scss/style.sass
@@ -98,6 +98,10 @@
 
 /*-----detail-start----*/ 
 
+@import "sourse/pages/_contacts.sass"
+@import "sourse/pages/_recycling.sass"
+@import "sourse/pages/_nodes.sass"
+
 @import "sourse/pages/detail/_default.sass"
 @import "sourse/pages/detail/_tabs.sass"
 
@@ -123,11 +127,24 @@
 /*-----services-end----*/ 
 
 /*-----product-start----*/ 
+@import "sourse/pages/product/_filter.sass"
 @import "sourse/pages/product/_catalog.sass"
+@import "sourse/pages/product/_detail.sass"
 /*-----product-end----*/ 
+
+/*-----project-start----*/ 
+// @import "sourse/pages/project/_filter.sass"
+@import "sourse/pages/project/_catalog.sass"
+// @import "sourse/pages/project/_detail.sass"
+/*-----project-end----*/ 
 
 /*-----reviews-start----*/ 
 @import "sourse/pages/reviews/_catalog.sass"
 /*-----reviews-end----*/ 
+
+/*-----vacancies-start----*/ 
+@import "sourse/pages/vacancies/_catalog.sass"
+@import "sourse/pages/vacancies/_detail.sass"
+/*-----vacancies-end----*/ 
 
 /*-----pages-end----*/ 
