--- a/pug/blocks/map.pug
+++ b/pug/blocks/map.pug
@@ -10,7 +10,5 @@
 			.text-address м. Китай-город, Лубянский пр., 15, стр. 4
 		.phone-feedback
 			div +7 (499) 938-83-51
-.map_home
+.contacts-map
 	#map(data-marker="/images/icons/marker-black.svg")
-script(src="https://api-maps.yandex.ru/2.1/?lang=ru-RU&amp;apikey=AAyE0FsBAAAApZ_zfwIA_dXSEkWE4_EY3eJc0MxKY2DPitcAAAAAAAAAAADTxJqFLJMxqfrjbNVz6ghuLNJ4tw" type="text/javascript")
-script(src="/js/map.js")
