--- a/pug/pages/home/main.pug
+++ b/pug/pages/home/main.pug
@@ -3,7 +3,9 @@
 		img(src="/images/main-bg.jpg", alt="")
 	.main-home-gradient
 	.num-slider 
-		.current 1
+		.current
+			ul.ln.num-box 
+
 		span /
 		.total 1
 	.main-home-slider.main-slider
@@ -11,23 +13,22 @@
 			.main-grid
 				.col-7.col-offset-3
 					h2 Асфальтобетонные заводы SANY
-					h3 Производительностью от 80 до 450 тонн/час
+					h3 1 Производительностью от 80 до 450 тонн/час
 		.home-slider-item 
 			.main-grid
 				.col-7.col-offset-3
 					h2 Асфальтобетонные заводы SANY
-					h3 Производительностью от 80 до 450 тонн/час
+					h3 2 Производительностью от 80 до 450 тонн/час
 		.home-slider-item 
 			.main-grid
 				.col-7.col-offset-3
 					h2 Асфальтобетонные заводы SANY
-					h3 Производительностью от 80 до 450 тонн/час
+					h3 3 Производительностью от 80 до 450 тонн/час
 		.home-slider-item 
 			.main-grid
 				.col-7.col-offset-3
 					h2 Асфальтобетонные заводы SANY
-					h3 Производительностью от 80 до 450 тонн/час
+					h3 4 Производительностью от 80 до 450 тонн/час
 	.main-full
-		.loop-ico.loop-main-btn
 		.main-scroll-down
 			i
