--- a/scss/sourse/default/_base.sass
+++ b/scss/sourse/default/_base.sass
@@ -80,7 +80,7 @@ h6
 	padding: 0
 	font-weight: 700
 h1
-	font-size: 68px
+	font-size: 32px
 	line-height: 1.2
 h2
 	font-size: 40px
@@ -88,7 +88,8 @@ h2
 h3
 	font-size: 28px
 	line-height: 1.2
-
+p
+	margin: 0 0 15px
 @media (max-width: 768px)
 	h1
 		font-size: 48px
