--- a/scss/sourse/default/forms/_checkradio.sass
+++ b/scss/sourse/default/forms/_checkradio.sass
@@ -19,8 +19,8 @@
 		opacity: 0
 
 		&:checked~span
-			background-color: $blueColor
-			border-color: $blueColor
+			background-color: $whiteColor
+			border-color: $blackColor
 			&:after
 				display: block
 
@@ -32,8 +32,8 @@
 		border-radius: 100%
 		&:after
 			content: ""
-			@include positionElement(10px, 10px, 4px,4px)
-			background-color: $whiteColor
+			@include positionElement(14px, 14px, 2px,2px)
+			background-color: $redColor
 			border-radius: 100%
 
 			display: none
