--- a/scss/sourse/elements/_pagination.sass
+++ b/scss/sourse/elements/_pagination.sass
@@ -18,23 +18,27 @@
     font-weight: 500
     text-decoration: none
     line-height: 27px
-    border: 1px solid $grayColorSecond
+    border: 1px solid $grayColor
+    border-radius: 4px
     font-size: $smallSize
     vertical-align: middle
     margin: 0 6px
     transition: ease-out 0.25s
-    color: $grayColor
+    color: $whiteColor
+    background-color: $grayColor
     cursor: pointer
+    font-weight: 700
   li:hover a,
   a:hover
-    color: $goldColor
-    border-color: $goldColor
+    color: $redColor
+    border-color: $grayColor
   span
-    background-color: $goldColor
+    background-color: $redColor
     color: $whiteColor
   li.selected a
     color: $whiteColor
-    background-color: $goldColor
+    background-color: $redColor
+    border-color: $grayColor
 
   .previous,
   .next
@@ -49,14 +53,14 @@
       @include icoEl(30px, 30px, "../images/arrows/carret-left-gray.svg")
 
       &:hover
-        background-color: $goldColor
+        background-color: $redColor
         background-image: url("../images/arrows/carret-left-white.svg")
 
   .next
     a
       @include icoEl(30px, 30px, "../images/arrows/carret-right-gray.svg")
       &:hover
-        background-color: $goldColor
+        background-color: $redColor
         background-image: url("../images/arrows/carret-right-white.svg")
 
 /*pagination page end*/
