--- a/pug/components/connect-mixins.pug
+++ b/pug/components/connect-mixins.pug
@@ -2,6 +2,7 @@ include items/blog-item.pug
 include items/services-item.pug 
 include items/reviews-item.pug 
 include items/product-item.pug 
+include items/simple-item.pug 
 
 include items/advantages-item.pug 
 include pagination.pug
