--- a/pug/components/items/blog-item.pug
+++ b/pug/components/items/blog-item.pug
@@ -9,4 +9,4 @@ mixin blogItem(name, text, data)
 				a(href="#")=name
 			.blog-item-text=text
 			.btn-container
-				a(href="#").btn.btn--blue-border Подробнее
+				a(href="#").btn.btn--black-border Подробнее
