--- a/pug/components/items/product-item.pug
+++ b/pug/components/items/product-item.pug
@@ -16,11 +16,12 @@ mixin productItem(name, text, img, hint)
 					div Производительность:
 					b 130-150 т/ч  
 				li
-					div Мощность
+					div Мощность:
 					b 80 кВт
 				li
 					div Площадь установки:
-					b 40м3
+					b 40м 
+						sup 3 
 		.btn-product-container
 			div
 				a(href="#").btn.btn--red Забронировать
