--- a/pug/pages/home/products-6.pug
+++ b/pug/pages/home/products-6.pug
@@ -14,13 +14,15 @@ section
 			.col-3
 				+productItem("Бетоносмесительные установки HZS60G","150 млн. руб.","6.jpg")
 		.col-6 
-			h4 
-				| Варианты применения:
-			div
-				|Склад песка и гравийного материала;
-				|Горное дело; Рециклинг строительных твердых отходов; Тоннельный шлак. Цементное покрытие
-				|до асфальтированной дороги.
-			h4 
-				| Технология дробления:
-			div
-				|Высокоточная роторная система; Безопасное техобслуживание; «Умная» антиблокировочная система; Адаптивная регулировка агрегатов
+			.product-catalog-info
+				h4 
+					| Варианты применения:
+				div
+					|Склад песка и гравийного материала;
+					|Горное дело; Рециклинг строительных твердых отходов; Тоннельный шлак. Цементное покрытие
+					|до асфальтированной дороги.
+				.product-catalog-info-stub
+				h4 
+					| Технология дробления:
+				div
+					|Высокоточная роторная система; Безопасное техобслуживание; «Умная» антиблокировочная система; Адаптивная регулировка агрегатов
