--- a/scss/sourse/blocks/_header.sass
+++ b/scss/sourse/blocks/_header.sass
@@ -27,7 +27,9 @@ header
     top: 0
     background: $whiteColor
     color: $blackColor
-    border-bottom: 1px solid #eee
+
+    box-shadow: 0 0 33px rgb(0 0 0 / 7%)
+    // border-bottom: 1px solid #eee
     .logo-red
       display: flex
     .logo-white
