--- a/scss/sourse/default/forms/_default.sass
+++ b/scss/sourse/default/forms/_default.sass
@@ -22,7 +22,7 @@ input
 		outline: 0
 		border-color: $redColor
 	&::placeholder
-		color: $blackColor
+		color: $grayColor
 
 .input-search
 	font-size: $smallSize
