--- a/pug/pages/home/feedback.pug
+++ b/pug/pages/home/feedback.pug
@@ -7,34 +7,34 @@ section.feedback
 		.col-6 
 			.input-box
 				label Ваше имя:*
-				+inputText('Введите','require')
-		.col-6 
-			.input-box
-				label Ваша должность:*
-				+inputText('Введите','require')
-		.col-6 
-			.input-box
-				label Ваш телефон:*
-				+inputPhone(' +7 000 - 00 – 00 ', 'require')
+				+inputText('Введите имя','require')
 		.col-6 
 			.input-box
 				label Ваша должность:
-				+inputText('Введите',)
+				+inputText('Введите должность','require')
 		.col-6 
 			.input-box
-				label Email
-				+inputEmail('Email')
+				label Ваш телефон:*
+				+inputPhone(' +7 000 000 - 00 – 00 ', 'require')
+		.col-6 
+			.input-box
+				label Интересующий вас товар или услуга:
+				+inputText('Введите наименование',)
+		.col-6 
+			.input-box
+				label Email:*
+				+inputEmail('Введите email') 
 			.input-box
 				label Наименование организации:
-				+inputText('Введите')
+				+inputText('Введите наименование организации')
 		.col-6 
 			.input-box
 				label Дополнительные комментарии:
-				+inputTextarea('Введите')
+				+inputTextarea('Введите дополнительные комментарии')
 		.col-12 
 			.input-box
 				.checkbox.agreement
-					label Согласен (на) на обработку 
+					label Согласен(на) на обработку 
 						a(href="#") персональных данных 
 						input(type="checkbox" checked)
 						span
