--- a/pug/pages/nodes.pug
+++ b/pug/pages/nodes.pug
@@ -9,11 +9,15 @@ include ../default/build-header
 				.nodes-main-box
 					h2 Ключевые узлы
 					div «Мерко Руссланд» уделяет особое внимание ключевым компонентам установок. Сушильный барабан, горелка, грохот, фильтр, система управления идеально соответствуют друг другу и гарантируют безупречную работу и высокую производительность асфальтосмесительной установки.
-		.main-full
-			h3 Сушильные барабаны
+		.main-full.nodes-section
+			h2 Сушильные барабаны
 			p Сушильные барабаны предназначены для нагрева и сушки сырья. Мы предлагаем модели для установок производительностью от 80 до 400 тонн в час.По желанию заказчика добавляется функция регулирования скорости. Она обеспечивает точную настройку системы нагрева под определенный режим работы, что может пригодиться, например, при переходе от выпуска низкотемпературного асфальта к производству высокотемпературных смесей.
 		.main-grid.nodes-stage
-			.nodes-stage-item 
+			.nodes-stage-bg
+				.img-cover
+					img(src="/images/temp/1.jpg", alt="")
+			.nodes-stage-gradinet
+			.nodes-stage-item 	
 				b 1
 				div Эффективная работа, экономия топлива, низкие теплопотери — благодаря оптимизированной ступенчатой системе нагрева материалов, стабильному поддержанию температуры и надежной термоизоляции.
 			.nodes-stage-item 
@@ -25,114 +29,124 @@ include ../default/build-header
 			.nodes-stage-item 
 				b 4
 				div Простое обслуживание — продуманная конструкция позволяет легко заменять компоненты, которые быстро изнашиваются.
-		.nodes-stage-gallery
-			.main-grid
-				-for(i=0;i<3;i++)
-					.col-4
-						.nodes-stage-gallery-img 
+		.main-grid.nodes-stage-gallery
+			-for(i=0;i<3;i++)
+				.col-4
+					.nodes-stage-gallery-img 
+						.img-cover
 							img(src="/images/temp/1.jpg", alt="")
-		.main-full
-			h3 Горелки
-			p Горелки разработаны специально для асфальтосмесительных установок. Они обеспечивают низкий уровень вредных выбросов и соответствуют высоким стандартам безопасности, что подтверждается многократными испытаниями.
+		.main-full.nodes-section
+			h2 Горелки
+			div Горелки разработаны специально для асфальтосмесительных установок. Они обеспечивают низкий уровень вредных выбросов и соответствуют высоким стандартам безопасности, что подтверждается многократными испытаниями.
 		.main-grid.nodes-stage
-			.col-6
-				.nodes-stage-item 
-					b 1
-					div Высокая полезная отдача при эксплуатации в российских условиях — мультитопливные горелки работают на природном газе, дизельном топливе и мазуте.
-				.nodes-stage-item 
-					b 2
-					div Экологичность и экономичность — топливо сгорает с максимальной эффективностью и минимумом остатков.
-				.nodes-stage-item 
-					b 3
-					div Гибкая настройка под каждую конкретную задачу благодаря электронной системе управления. Современное программное обеспечение автоматически регулирует мощность.
-				.nodes-stage-item 
-					b 4
-					div Длительный срок службы — за счет отсутствия частей, подверженных износу.
-				.nodes-stage-item 
-					b 5
-					div Длительный срок службы — за счет отсутствия частей, подверженных износу.
-				.nodes-stage-item 
-					b 6
-					div Длительный срок службы — за счет отсутствия частей, подверженных износу.
+			.nodes-stage-bg
+				.img-cover
+					img(src="/images/temp/1.jpg", alt="")
+			.nodes-stage-gradinet
+			.nodes-stage-item 
+				b 1
+				div Высокая полезная отдача при эксплуатации в российских условиях — мультитопливные горелки работают на природном газе, дизельном топливе и мазуте.
+			.nodes-stage-item 
+				b 2
+				div Экологичность и экономичность — топливо сгорает с максимальной эффективностью и минимумом остатков.
+			.nodes-stage-item 
+				b 3
+				div Гибкая настройка под каждую конкретную задачу благодаря электронной системе управления. Современное программное обеспечение автоматически регулирует мощность.
+			.nodes-stage-item 
+				b 4
+				div Длительный срок службы — за счет отсутствия частей, подверженных износу.
+			.nodes-stage-item 
+				b 5
+				div Длительный срок службы — за счет отсутствия частей, подверженных износу.
+			.nodes-stage-item 
+				b 6
+				div Длительный срок службы — за счет отсутствия частей, подверженных износу.
 		.nodes-stage-gallery
 			.main-grid
 				-for(i=0;i<3;i++)
 					.col-4
 						.nodes-stage-gallery-img 
 							img(src="/images/temp/1.jpg", alt="")
-		.main-full
-			h3 Смесители
-			p Смесители высокопроизводительные, надежные и износостойкие. Мощность плавно регулируется в соответствии с задачами, стоящими перед оператором.
+		.main-full.nodes-section
+			h2 Смесители
+			div Смесители высокопроизводительные, надежные и износостойкие. Мощность плавно регулируется в соответствии с задачами, стоящими перед оператором.
 		.main-grid.nodes-stage
-			.col-6
-				.nodes-stage-item 
-					b 1
-					div Высокое качество продукции — смесь получается максимально однородной за счет особого расположения лопаток.
-				.nodes-stage-item 
-					b 2
-					div Длительный срок службы — благодаря продуманной конструкции и использованию устойчивых к износу материалов.
-				.nodes-stage-item 
-					b 3
-					div Универсальность — устройство можно использовать для приготовления смесей разных типов, в том числе специальных.
-		.nodes-stage-gallery
-			.main-grid
+			.nodes-stage-bg
+				.img-cover
+					img(src="/images/temp/1.jpg", alt="")
+			.nodes-stage-gradinet
+			.nodes-stage-item 
+				b 1
+				div Высокое качество продукции — смесь получается максимально однородной за счет особого расположения лопаток.
+			.nodes-stage-item 
+				b 2
+				div Длительный срок службы — благодаря продуманной конструкции и использованию устойчивых к износу материалов.
+			.nodes-stage-item 
+				b 3
+				div Универсальность — устройство можно использовать для приготовления смесей разных типов, в том числе специальных.
+		.nodes-stage-gallery.main-grid
 				-for(i=0;i<3;i++)
 					.col-4
 						.nodes-stage-gallery-img 
 							img(src="/images/temp/1.jpg", alt="")
-		.main-full
-			h3 Рукавные фильтры
-			p Рукавные фильтры обеспечивают максимальную эффективность при минимальных перепадах давления и потерях тепла, а также существенно снижают уровень выброса твердых частиц в окружающую среду. Отношение объемного расхода газа к рабочей поверхности оптимизируется в соответствии с требованиями клиента. Рукавные фильтры поставляются в различных типоразмерах. В них применяются кассеты из алюминия, устойчивые к воздействию кислот. Опции, доступные для заказа:
+		.main-full.nodes-section
+			h2 Рукавные фильтры
+			div Рукавные фильтры обеспечивают максимальную эффективность при минимальных перепадах давления и потерях тепла, а также существенно снижают уровень выброса твердых частиц в окружающую среду. Отношение объемного расхода газа к рабочей поверхности оптимизируется в соответствии с требованиями клиента. Рукавные фильтры поставляются в различных типоразмерах. В них применяются кассеты из алюминия, устойчивые к воздействию кислот. Опции, доступные для заказа:
 				|частотно-регулируемый привод вытяжного вентилятора
 				|автоматизированная система очистки фильтра, дополненная датчиком дифференциального давления
 		.main-grid.nodes-stage
-			.col-6
-				.nodes-stage-item 
-					b 1
-					div Снижение содержания твердых частиц в отработавших газах до значений менее 10 мг/нм3 — это обеспечивает высокая пропускная способность и большая площадь поверхности.
-				.nodes-stage-item 
-					b 2
-					div Соответствие строгим экологическим стандартам — за счет эффективности фильтрации, превышающей 99,9%.
-				.nodes-stage-item 
-					b 3
-					div Уменьшение эксплуатационных расходов — конструкция рукавного фильтра снижает падение температуры и давления.
-				.nodes-stage-item 
-					b 3
-					div Длительный срок службы — благодаря щадящей очистке с помощью системы Rotor-Step, значительно уменьшающей их износ по сравнению с пневмоприводным оборудованием, а также за счет минимального количества механических частей. Это позволяет обойтись без частого техобслуживания.
-		.nodes-stage-gallery
-			.main-grid
+			.nodes-stage-bg
+				.img-cover
+					img(src="/images/temp/1.jpg", alt="")
+			.nodes-stage-gradinet
+			.nodes-stage-item 
+				b 1
+				div Снижение содержания твердых частиц в отработавших газах до значений менее 10 мг/нм3 — это обеспечивает высокая пропускная способность и большая площадь поверхности.
+			.nodes-stage-item 
+				b 2
+				div Соответствие строгим экологическим стандартам — за счет эффективности фильтрации, превышающей 99,9%.
+			.nodes-stage-item 
+				b 3
+				div Уменьшение эксплуатационных расходов — конструкция рукавного фильтра снижает падение температуры и давления.
+			.nodes-stage-item 
+				b 3
+				div Длительный срок службы — благодаря щадящей очистке с помощью системы Rotor-Step, значительно уменьшающей их износ по сравнению с пневмоприводным оборудованием, а также за счет минимального количества механических частей. Это позволяет обойтись без частого техобслуживания.
+		.nodes-stage-gallery.main-grid
 				-for(i=0;i<3;i++)
 					.col-4
 						.nodes-stage-gallery-img 
 							img(src="/images/temp/1.jpg", alt="")
-		.main-full
-			h3 Грохот
-			p Грохоты «СоюзАсфальт» обеспечивают требуемое качество сортировки при сохранении высокой производительности, в том числе при работе в неблагоприятных условиях окружающей среды. Отличаются точностью просеивания минералов, надежностью и оптимальной загрузкой материала для максимального использования площади сит. Конструкция грохота пыленепроницаема, проста в эксплуатации, требует минимального обслуживания за счет отсутствия быстроизнашивающихся компонентов.
+		.main-full.nodes-section
+			h2 Грохот
+			div Грохоты «СоюзАсфальт» обеспечивают требуемое качество сортировки при сохранении высокой производительности, в том числе при работе в неблагоприятных условиях окружающей среды. Отличаются точностью просеивания минералов, надежностью и оптимальной загрузкой материала для максимального использования площади сит. Конструкция грохота пыленепроницаема, проста в эксплуатации, требует минимального обслуживания за счет отсутствия быстроизнашивающихся компонентов.
 		.main-grid.nodes-stage
-			.col-6
-				.nodes-stage-item 
-					b 1
-					div Высокая производительность и точность сортировки — за счет большой площади поверхности, позволяющей оптимально распределять материал по ситу, и высокой удельной скорости грохочения.
-				.nodes-stage-item 
-					b 2
-					div Гибкая настройка — можно контролировать угол наклона, амплитуду и частоту вибрации.
-				.nodes-stage-item 
-					b 3
-					div Уменьшение эксплуатационных расходов — конструкция рукавного фильтра снижает падение температуры и давления.
-				.nodes-stage-item 
-					b 4
-					div Длительный срок службы, низкие эксплуатационные расходы — благодаря продуманной конструкции, уменьшающей нагрузку на детали и узлы и позволяющей свести обслуживание к минимуму.
-				.nodes-stage-item 
-					b 5
-					div В качестве дополнительной опции можно заказать жаропрочную конструкцию для выпуска высокотемпературного и литого асфальта.
-				.nodes-stage-item 
-					b 6
-					div В качестве дополнительной опции можно заказать боковые стенки на сита для грохота в целях предотвращения просыпания материала.
-		.nodes-stage-gallery
-			.main-grid
-				-for(i=0;i<3;i++)
-					.col-4
-						.nodes-stage-gallery-img 
-							img(src="/images/temp/1.jpg", alt="")
-.stub
+			.nodes-stage-bg
+				.img-cover
+					img(src="/images/temp/1.jpg", alt="")
+			.nodes-stage-gradinet
+			.nodes-stage-item 
+				b 1
+				div Высокая производительность и точность сортировки — за счет большой площади поверхности, позволяющей оптимально распределять материал по ситу, и высокой удельной скорости грохочения.
+			.nodes-stage-item 
+				b 2
+				div Гибкая настройка — можно контролировать угол наклона, амплитуду и частоту вибрации.
+			.nodes-stage-item 
+				b 3
+				div Уменьшение эксплуатационных расходов — конструкция рукавного фильтра снижает падение температуры и давления.
+			.nodes-stage-item 
+				b 4
+				div Длительный срок службы, низкие эксплуатационные расходы — благодаря продуманной конструкции, уменьшающей нагрузку на детали и узлы и позволяющей свести обслуживание к минимуму.
+			.nodes-stage-item 
+				b 5
+				div В качестве дополнительной опции можно заказать жаропрочную конструкцию для выпуска высокотемпературного и литого асфальта.
+			.nodes-stage-item 
+				b 6
+				div В качестве дополнительной опции можно заказать боковые стенки на сита для грохота в целях предотвращения просыпания материала.
+		.main-grid.nodes-stage-gallery
+			-for(i=0;i<3;i++)
+				.col-4
+					.nodes-stage-gallery-img 
+						img(src="/images/temp/1.jpg", alt="")
+				
+	.stub
 	include ../blocks/footer
