--- a/pug/pages/product/catalog.pug
+++ b/pug/pages/product/catalog.pug
@@ -41,5 +41,6 @@ include ../../default/build-header
 					-for(var x = 0; x < 4; x++)
 						.col-4
 							+productItem("Грунтосмесительная установка WCZ400","150 млн. руб.","1.jpg", true)
+				+pagination()
 		.stub
 	include ../../blocks/footer
