--- a/scss/sourse/pages/_nodes.sass
+++ b/scss/sourse/pages/_nodes.sass
@@ -16,3 +16,34 @@
   h2
     color: inherit
     margin-bottom: 15px
+.nodes-section
+  padding: 60px 0
+  font-size: 18px
+  h2
+    margin: 0 0 30px
+    font-size: 32px
+.nodes-stage
+  height: 620px
+  position: relative
+  overflow: hidden
+  border-radius: 0 50px 0 50px
+  padding: 30px 60px
+  color: $whiteColor
+.nodes-stage-item
+  grid-column: span 3
+  position: relative
+  b
+    font-size: 48px
+.nodes-stage-bg,
+.nodes-stage-gradinet
+  @include positionElement(100%,100%,0,0)
+.nodes-stage-gradinet
+  @include bgImageEl("../images/node-stage-gradient.png",cover)
+.nodes-stage-gallery
+  margin-top: 30px
+  padding: 0
+.nodes-stage-gallery-img
+  height: 240px
+  position: relative
+  border-radius: 20px
+  overflow: hidden
