--- a/scss/sourse/pages/_recycling.sass
+++ b/scss/sourse/pages/_recycling.sass
@@ -9,15 +9,16 @@
   color: $whiteColor
   padding: 30px
   border-radius: 0 50px 0 50px
-  font-size: 20px
+  font-size: 16px
   font-weight: 300
   position: relative
   top: 90px
+  max-width: 400px
   h1
     padding: 0
-
+    font-size: 48px
   b
-    font-size: 28px
+    font-size: 32px
 .recycling-main-item
   margin-bottom: 15px
 .recycling-scale-container
@@ -56,7 +57,7 @@
     background-color: $redColor
     color: $whiteColor
     font-size: 20px
-    padding: 22px 30px
+    padding: 30px 30px
     border-radius: 0 30px 0 30px
 .recycling-item-info
   padding: 30px
