--- a/scss/sourse/pages/home/_advantages.sass
+++ b/scss/sourse/pages/home/_advantages.sass
@@ -3,6 +3,9 @@
   margin: 0 0 30px
   position: relative
   // text-transform: uppercase
+  transition: ease-out 0.5s
+  padding: 15px
+  border-radius: 20px
   img
     width: 70px
     height: 70px
@@ -15,6 +18,9 @@
     color: $whiteColor
     i
       background-image: url('../images/icons/more-white-fill.svg')
+  &:hover
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25)
+
 .advantages-item-text
   position: relative
   i
@@ -30,6 +36,6 @@
     position: relative
     color: inherit
 .advantages-bg
-  @include positionElement(calc(100% + 60px),700px,-30px, 30px)
+  @include positionElement(calc(100% + 60px),720px,-30px, 80px)
   background-color: $redColor
   border-radius: 0 30px 0 30px
