--- a/scss/sourse/pages/news/_catalog.sass
+++ b/scss/sourse/pages/news/_catalog.sass
@@ -17,8 +17,6 @@
       &:hover
         color: $goldColor
 .blog-item-info
-  padding: 30px 15px
-  border: 1px solid $grayColorSecond
 
 .blog-item-text
   overflow: hidden
@@ -26,7 +24,7 @@
   -webkit-line-clamp: 4
   -webkit-box-orient: vertical
   line-clamp: 4
-  margin: 0 0 30px
+  margin: 0 0 15px
   min-height: 84px
   font-size: $smallSize
 .blog-item-img
@@ -35,6 +33,8 @@
   position: relative
   overflow: hidden
   background-color: $blueColor
+  border-radius: 0 20px 0 20px
+  margin: 0 0 15px
   .img-cover
     @include positionElement(100%,100%,0,0)
     transform: scale(1)
@@ -50,6 +50,6 @@
 .blog-item-date
   font-size: 13px
   text-transform: uppercase
-  color: $goldColor
+  color: $grayColor
   margin: 0 0 13px
   font-weight: 600
