--- a/scss/sourse/pages/product/_catalog.sass
+++ b/scss/sourse/pages/product/_catalog.sass
@@ -42,13 +42,13 @@
 .product-item-img
   width: 100%
   height: 300px
-  border-radius: 50px 0 50px 0
+  border-radius: 40px 0 40px 0
   display: block
   position: relative
   overflow: hidden
-  background-color: $blueColor
+  // background-color: $blueColor
   font-size: 0
-  transform: scale(1.01)
+  // transform: scale(1.01)
   display: flex
   flex-direction: column
 
@@ -66,7 +66,7 @@
   font-size: $smallSize
   margin: 15px 0 30px
   li
-    margin: 0 0 10px
+    margin: 0 0 0px
     display: flex
     justify-content: space-between
   div
@@ -85,3 +85,11 @@
   left: -90px
   transition: ease-out 0.5s
   z-index: 2
+.product-catalog-info
+  border-radius: 20px
+  background: #EDEDED
+  padding: 30px
+  h4
+    margin-bottom: 11px
+.product-catalog-info-stub
+  height: 30px
