--- a/style.css
+++ b/style.css
@@ -186,9 +186,14 @@ section {
 
 .head-section {
   margin-bottom: 30px;
+  position: relative;
 }
 .head-section h2 {
   margin-bottom: 15px;
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+  padding-right: 15px;
 }
 .head-section h2 span {
   display: block;
@@ -200,7 +205,7 @@ section {
   font-weight: 500;
 }
 .head-section h3 a {
-  color: #ed1834;
+  color: #E52521;
   text-decoration: none;
 }
 .head-section h3 a:hover {
@@ -208,6 +213,11 @@ section {
 }
 .head-section .btn-container {
   text-align: right;
+}
+.head-section .more-btn--black {
+  background-color: #ffffff;
+  position: relative;
+  z-index: 1;
 }
 
 .btn-container-section {
@@ -230,19 +240,10 @@ section {
   display: inline-block;
 }
 .breadcrumbs em {
-  font-size: 0;
   margin-right: 5px;
   margin-left: 5px;
   text-align: center;
   display: inline-block;
-  display: inline-block;
-  vertical-align: middle;
-  width: 20px;
-  height: 20px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 130%;
-  background-image: url("../images/arrows/carret-right-gray.svg");
   vertical-align: middle;
 }
 .breadcrumbs a {
@@ -393,9 +394,9 @@ section {
   color: #ffffff;
 }
 .btn--black:hover {
-  background: #ed1834;
+  background: #E52521;
   color: #ffffff;
-  border-color: #ed1834;
+  border-color: #E52521;
 }
 
 .btn--black-border {
@@ -404,31 +405,31 @@ section {
   color: #202020;
 }
 .btn--black-border:hover {
-  background: #ed1834;
+  background: #E52521;
   color: #ffffff;
-  border-color: #ed1834;
+  border-color: #E52521;
 }
 
 .btn--red {
-  background-color: #ed1834;
-  border-color: #ed1834;
+  background-color: #E52521;
+  border-color: #E52521;
   color: #ffffff;
 }
 .btn--red:hover {
   background: #ffffff;
-  color: #ed1834;
-  border-color: #ed1834;
+  color: #E52521;
+  border-color: #E52521;
 }
 
 .btn--red-border {
   background: none;
-  border-color: #ed1834;
-  color: #ed1834;
+  border-color: #E52521;
+  color: #E52521;
 }
 .btn--red-border:hover {
-  background: #ed1834;
+  background: #E52521;
   color: #ffffff;
-  border-color: #ed1834;
+  border-color: #E52521;
 }
 
 .btn--orange {
@@ -467,42 +468,44 @@ section {
 }
 .pagination a, .pagination span {
   width: 30px;
-  height: 30px;
+  height: 24px;
   display: inline-block;
   text-align: center;
   font-weight: 500;
   text-decoration: none;
-  line-height: 27px;
-  border: 1px solid #C1C1C1;
+  line-height: 22px;
+  border: 1px solid #E2E2E2;
   border-radius: 4px;
   font-size: 14px;
   vertical-align: middle;
   margin: 0 6px;
   -webkit-transition: ease-out 0.25s;
   transition: ease-out 0.25s;
-  color: #ffffff;
-  background-color: #C1C1C1;
+  color: #202020;
+  background-color: #E2E2E2;
   cursor: pointer;
   font-weight: 700;
 }
 .pagination li:hover a,
 .pagination a:hover {
-  color: #ed1834;
+  color: #E52521;
   border-color: #C1C1C1;
 }
 .pagination span {
-  background-color: #ed1834;
+  background-color: #E52521;
   color: #ffffff;
 }
 .pagination li.selected a {
   color: #ffffff;
-  background-color: #ed1834;
-  border-color: #C1C1C1;
+  background-color: #E52521;
+  border-color: #E52521;
 }
 .pagination .previous a,
 .pagination .next a {
+  background: none;
   background-size: 100%;
   font-size: 0;
+  border-color: #ffffff;
 }
 .pagination .previous.disabled,
 .pagination .next.disabled {
@@ -517,10 +520,10 @@ section {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  background-image: url("../images/arrows/carret-left-gray.svg");
+  background-image: url("../images/arrows/carret-left-black.svg");
 }
 .pagination .previous a:hover {
-  background-color: #ed1834;
+  background-color: #E52521;
   background-image: url("../images/arrows/carret-left-white.svg");
 }
 .pagination .next a {
@@ -531,10 +534,10 @@ section {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  background-image: url("../images/arrows/carret-right-gray.svg");
+  background-image: url("../images/arrows/carret-right-black.svg");
 }
 .pagination .next a:hover {
-  background-color: #ed1834;
+  background-color: #E52521;
   background-image: url("../images/arrows/carret-right-white.svg");
 }
 
@@ -588,7 +591,7 @@ section {
   background-image: url("../images/icons/phone-white.svg");
 }
 .phone-btn:hover {
-  color: #ed1834;
+  color: #E52521;
 }
 .phone-btn:hover i {
   background-image: url("../images/icons/phone-red.svg");
@@ -613,7 +616,7 @@ section {
   background-image: url("../images/icons/mail-white.svg");
 }
 .mail-btn:hover {
-  color: #ed1834;
+  color: #E52521;
 }
 .mail-btn:hover i {
   background-image: url("../images/icons/mail-red.svg");
@@ -659,7 +662,7 @@ section {
   background-image: url("../images/icons/more-black.svg");
 }
 .more-btn--black:hover {
-  color: #ed1834;
+  color: #E52521;
 }
 .more-btn--black:hover i {
   background-image: url("../images/icons/more-red.svg");
@@ -685,7 +688,7 @@ section {
   background-image: url("../images/arrows/arrow-right-black.svg");
 }
 .link-next:hover {
-  color: #ed1834;
+  color: #E52521;
 }
 .link-next:hover i {
   background-image: url("../images/arrows/arrow-right-red.svg");
@@ -715,7 +718,7 @@ section {
   background-image: url("../images/icons/more-white.svg");
 }
 .more-btn--white:hover {
-  color: #ed1834;
+  color: #E52521;
 }
 .more-btn--white:hover i {
   background-image: url("../images/icons/more-white.svg");
@@ -744,7 +747,7 @@ section {
   background-image: url("../images/icons/more-gray.svg");
 }
 .more-btn--gray:hover {
-  color: #ed1834;
+  color: #E52521;
 }
 .more-btn--gray:hover i {
   background-image: url("../images/icons/more-red.svg");
@@ -1627,24 +1630,24 @@ input {
 .custom-select:focus,
 .file-decorate:focus {
   outline: 0;
-  border-color: #ed1834;
+  border-color: #E52521;
 }
 .input-decorate::-webkit-input-placeholder, .custom-select::-webkit-input-placeholder, .file-decorate::-webkit-input-placeholder {
-  color: #202020;
+  color: #C1C1C1;
 }
 .input-decorate::-moz-placeholder, .custom-select::-moz-placeholder, .file-decorate::-moz-placeholder {
-  color: #202020;
+  color: #C1C1C1;
 }
 .input-decorate:-ms-input-placeholder, .custom-select:-ms-input-placeholder, .file-decorate:-ms-input-placeholder {
-  color: #202020;
+  color: #C1C1C1;
 }
 .input-decorate::-ms-input-placeholder, .custom-select::-ms-input-placeholder, .file-decorate::-ms-input-placeholder {
-  color: #202020;
+  color: #C1C1C1;
 }
 .input-decorate::placeholder,
 .custom-select::placeholder,
 .file-decorate::placeholder {
-  color: #202020;
+  color: #C1C1C1;
 }
 
 .input-search {
@@ -1679,7 +1682,7 @@ input {
 
 .file-decorate-error span,
 .input-error {
-  border-color: #ed1834;
+  border-color: #E52521;
 }
 
 .mail-error {
@@ -1687,7 +1690,7 @@ input {
 }
 
 .error-hint {
-  color: #ed1834;
+  color: #E52521;
   margin-top: 2px;
 }
 
@@ -2001,7 +2004,7 @@ input {
   height: 14px;
   left: 2px;
   top: 2px;
-  background-color: #ed1834;
+  background-color: #E52521;
   border-radius: 100%;
   display: none;
 }
@@ -2031,7 +2034,7 @@ input {
   height: 18px;
   left: 5px;
   top: 5px;
-  background-color: #ed1834;
+  background-color: #E52521;
 }
 
 /*-checkbox-wp-*/
@@ -2473,7 +2476,7 @@ header a {
   text-decoration: none;
 }
 header a:hover {
-  color: #ed1834;
+  color: #E52521;
 }
 header .btn {
   padding: 9px 5px;
@@ -2492,7 +2495,8 @@ header.show {
   top: 0;
   background: #ffffff;
   color: #202020;
-  border-bottom: 1px solid #eee;
+  -webkit-box-shadow: 0 0 33px rgba(0, 0, 0, 0.07);
+          box-shadow: 0 0 33px rgba(0, 0, 0, 0.07);
 }
 header.show .logo-red {
   display: -webkit-box;
@@ -2620,7 +2624,7 @@ header.show .mail-btn:hover i {
 
 footer {
   position: relative;
-  background-color: #ed1834;
+  background-color: #E52521;
   color: #ffffff;
 }
 footer .main-grid {
@@ -3020,20 +3024,22 @@ footer h3 a {
 }
 
 .recycling-main-box {
-  background-color: #ed1834;
+  background-color: #E52521;
   color: #ffffff;
   padding: 30px;
   border-radius: 0 50px 0 50px;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 300;
   position: relative;
   top: 90px;
+  max-width: 400px;
 }
 .recycling-main-box h1 {
   padding: 0;
+  font-size: 48px;
 }
 .recycling-main-box b {
-  font-size: 28px;
+  font-size: 32px;
 }
 
 .recycling-main-item {
@@ -3100,10 +3106,10 @@ footer h3 a {
   height: auto;
   left: 0;
   bottom: 0;
-  background-color: #ed1834;
+  background-color: #E52521;
   color: #ffffff;
   font-size: 20px;
-  padding: 22px 30px;
+  padding: 30px 30px;
   border-radius: 0 30px 0 30px;
 }
 
@@ -3180,13 +3186,68 @@ footer h3 a {
   margin-top: auto;
   margin-bottom: 45px;
   padding: 30px;
-  background-color: #ed1834;
+  background-color: #E52521;
   border-radius: 0 50px 0 50px;
   color: #ffffff;
 }
 .nodes-main-box h2 {
   color: inherit;
   margin-bottom: 15px;
+}
+
+.nodes-section {
+  padding: 60px 0;
+  font-size: 18px;
+}
+.nodes-section h2 {
+  margin: 0 0 30px;
+  font-size: 32px;
+}
+
+.nodes-stage {
+  height: 620px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 0 50px 0 50px;
+  padding: 30px 60px;
+  color: #ffffff;
+}
+
+.nodes-stage-item {
+  -ms-grid-column-span: 3;
+  grid-column: span 3;
+  position: relative;
+}
+.nodes-stage-item b {
+  font-size: 48px;
+}
+
+.nodes-stage-bg,
+.nodes-stage-gradinet {
+  width: 100%;
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
+.nodes-stage-gradinet {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../images/node-stage-gradient.png");
+}
+
+.nodes-stage-gallery {
+  margin-top: 30px;
+  padding: 0;
+}
+
+.nodes-stage-gallery-img {
+  height: 240px;
+  position: relative;
+  border-radius: 20px;
+  overflow: hidden;
 }
 
 .link-next-container {
@@ -3427,7 +3488,7 @@ footer h3 a {
   z-index: 3;
   right: 0;
   bottom: 0;
-  background: #ed1834;
+  background: #E52521;
   text-align: center;
   padding: 28px 4px;
   cursor: pointer;
@@ -3475,6 +3536,10 @@ footer h3 a {
 .advantages-item {
   margin: 0 0 30px;
   position: relative;
+  -webkit-transition: ease-out 0.5s;
+  transition: ease-out 0.5s;
+  padding: 15px;
+  border-radius: 20px;
 }
 .advantages-item img {
   width: 70px;
@@ -3491,6 +3556,10 @@ footer h3 a {
 }
 .advantages-item.extra i {
   background-image: url("../images/icons/more-white-fill.svg");
+}
+.advantages-item:hover {
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
 .advantages-item-text {
@@ -3525,10 +3594,10 @@ footer h3 a {
 .advantages-bg {
   width: calc(100% + 60px);
   position: absolute;
-  height: 700px;
+  height: 720px;
   left: -30px;
-  top: 30px;
-  background-color: #ed1834;
+  top: 80px;
+  background-color: #E52521;
   border-radius: 0 30px 0 30px;
 }
 
@@ -3536,7 +3605,7 @@ footer h3 a {
   gap: 0 30px;
 }
 .feedback textarea {
-  height: 172px;
+  height: 160px;
 }
 
 .partners {
@@ -3584,7 +3653,7 @@ footer h3 a {
   position: relative;
   height: 100%;
   height: 340px;
-  font-size: 20px;
+  font-size: 18px;
   padding: 50px 30px 30px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3597,7 +3666,7 @@ footer h3 a {
   overflow: hidden;
 }
 .about-item h3 {
-  font-size: 48px;
+  font-size: 32px;
 }
 .about-item .btn-container {
   margin-top: auto;
@@ -3609,7 +3678,7 @@ footer h3 a {
   height: 110px;
   left: 0;
   bottom: 0;
-  background-color: #ed1834;
+  background-color: #E52521;
   color: #ffffff;
   font-size: 40px;
   border-radius: 0 40px 0 0;
@@ -3642,7 +3711,7 @@ footer h3 a {
 }
 
 .about-item-price {
-  background-color: #ed1834;
+  background-color: #E52521;
   color: #ffffff;
   border-radius: 0 40px 0 40px;
 }
@@ -3779,18 +3848,13 @@ footer h3 a {
   color: #C19F56;
 }
 
-.blog-item-info {
-  padding: 30px 15px;
-  border: 1px solid #9B9B9B;
-}
-
 .blog-item-text {
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   line-clamp: 4;
-  margin: 0 0 30px;
+  margin: 0 0 15px;
   min-height: 84px;
   font-size: 14px;
 }
@@ -3801,6 +3865,8 @@ footer h3 a {
   position: relative;
   overflow: hidden;
   background-color: #14143C;
+  border-radius: 0 20px 0 20px;
+  margin: 0 0 15px;
 }
 .blog-item-img .img-cover {
   width: 100%;
@@ -3831,7 +3897,7 @@ footer h3 a {
 .blog-item-date {
   font-size: 13px;
   text-transform: uppercase;
-  color: #C19F56;
+  color: #C1C1C1;
   margin: 0 0 13px;
   font-weight: 600;
 }
@@ -4005,7 +4071,7 @@ footer h3 a {
 }
 .product-item h3 {
   font-size: 16px;
-  background-color: #ed1834;
+  background-color: #E52521;
   color: #ffffff;
   border-radius: 40px 0 40px 0;
   position: relative;
@@ -4037,14 +4103,11 @@ footer h3 a {
 .product-item-img {
   width: 100%;
   height: 300px;
-  border-radius: 50px 0 50px 0;
+  border-radius: 40px 0 40px 0;
   display: block;
   position: relative;
   overflow: hidden;
-  background-color: #14143C;
   font-size: 0;
-  -webkit-transform: scale(1.01);
-          transform: scale(1.01);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4078,7 +4141,7 @@ footer h3 a {
   margin: 15px 0 30px;
 }
 .product-item-description li {
-  margin: 0 0 10px;
+  margin: 0 0 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4112,6 +4175,19 @@ footer h3 a {
   z-index: 2;
 }
 
+.product-catalog-info {
+  border-radius: 20px;
+  background: #EDEDED;
+  padding: 30px;
+}
+.product-catalog-info h4 {
+  margin-bottom: 11px;
+}
+
+.product-catalog-info-stub {
+  height: 30px;
+}
+
 .product-main {
   margin-bottom: 45px;
 }
@@ -4120,16 +4196,6 @@ footer h3 a {
   position: relative;
   height: 580px;
   margin-bottom: 30px;
-}
-.product-slider-container::before {
-  content: "";
-  width: calc(100% - 30px);
-  position: absolute;
-  height: calc(100% - 15px);
-  left: -30px;
-  top: 30px;
-  border: 10px solid #ed1834;
-  border-radius: 0 50px 0 50px;
 }
 .product-slider-container ul {
   display: inline-block;
@@ -4201,7 +4267,7 @@ footer h3 a {
   z-index: 2;
   left: 0;
   bottom: 0;
-  background-color: #ed1834;
+  background-color: #E52521;
   border-radius: 0 30px 0 0;
 }
 .product-slider-loop i {
@@ -4232,7 +4298,6 @@ footer h3 a {
 .product-info {
   background-color: #C1C1C1;
   background-color: #f4f4f4;
-  border: 1px solid #ccc;
   padding: 30px;
   border-radius: 0 50px 0 50px;
 }
@@ -4273,7 +4338,7 @@ footer h3 a {
 
 .project-item-info {
   background-color: #C1C1C1;
-  height: 420px;
+  height: 360px;
   border-radius: 0 50px 0 50px;
   padding: 30px;
   display: -webkit-box;
@@ -4354,7 +4419,7 @@ footer h3 a {
 }
 .vacancies a:hover {
   text-decoration: none;
-  color: #ed1834;
+  color: #E52521;
 }
 
 .vacancies-descrition {
